--- a/app/templates/recipe_page.html
+++ b/app/templates/recipe_page.html
@@ -75,7 +75,7 @@
                
                 <div>
 
-                    <p>{{ short_summary }}</p>
+                    <p>{{ recipe.short_description }}</p>
                 </div>
                 <div class="tag">
                     {% for ingredient in recipe._ingredients %}
