--- a/app/templates/edit_recipe.html
+++ b/app/templates/edit_recipe.html
@@ -19,6 +19,10 @@
                             {{ form.name(class_="form-control", placeholder=recipe.name) }}
                         </div>
                         <div class="form-group required">
+                            {{ form.short_description.label}}
+                            {{ form.short_description(class_="form-control", rows="4") }}
+                        </div>
+                        <div class="form-group required">
                             {{ form.content.label}}
                             {{ form.content(class_="form-control", rows="10", placeholder="Your recipe...") }}
                         </div>
