--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,129 +2,129 @@
 <html lang="en">
 
 <head>
-    {% block head %}
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  {% block head %}
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    {% if title %}
-    <title>{{ title }}</title>
-    {% else %}
-    <title>Flask Cookbook</title>
-    {% endif %}
+  {% if title %}
+  <title>{{ title }}</title>
+  {% else %}
+  <title>Flask Cookbook</title>
+  {% endif %}
 
-    <!---Font Icon-->
-    <link href="{{ url_for('static', filename='static/css/font-awesome.min.css') }}" rel="stylesheet">
+  <!---Font Icon-->
+  <link href="{{ url_for('static', filename='static/css/font-awesome.min.css') }}" rel="stylesheet">
 
-    <!-- static/css -->
-    <link href="{{ url_for('static', filename='static/css/bootstrap.min.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='static/css/styles.min.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='static/css/select2.min.css') }}" rel="stylesheet">
+  <!-- static/css -->
+  <link href="{{ url_for('static', filename='static/css/bootstrap.min.css') }}" rel="stylesheet">
+  <link href="{{ url_for('static', filename='static/css/styles.min.css') }}" rel="stylesheet">
+  <link href="{{ url_for('static', filename='static/css/select2.min.css') }}" rel="stylesheet">
 
-    <!-- Favicon -->
-    <link rel="shortcut icon" href="{{ url_for('static', filename='static/favicon.ico') }}" />
-    <link rel="icon" href="{{ url_for('static', filename='static/favicon.ico') }}" />
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="{{ url_for('static', filename='static/favicon.ico') }}" />
+  <link rel="icon" href="{{ url_for('static', filename='static/favicon.ico') }}" />
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    {% endblock %}
-    
-    {% block scripts %}
-    <!-- Javascript -->
-    <script src="{{ url_for('static', filename='static/js/plugins/jquery.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='static/js/plugins/popper.min.js') }}"></script>
-    <script src=" {{ url_for('static', filename='static/js/plugins/bootstrap.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='static/js/plugins/select2.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='static/js/plugins/jquery-ui.js') }}"></script>
-    <script src="{{ url_for('static', filename='static/js/scripts.js') }}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.js"></script>
-    {% endblock %}
+  {% endblock %}
+
+  {% block scripts %}
+  <!-- Javascript -->
+  <script src="{{ url_for('static', filename='static/js/plugins/jquery.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='static/js/plugins/popper.min.js') }}"></script>
+  <script src=" {{ url_for('static', filename='static/js/plugins/bootstrap.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='static/js/plugins/select2.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='static/js/plugins/jquery-ui.js') }}"></script>
+  <script src="{{ url_for('static', filename='static/js/scripts.js') }}"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.js"></script>
+  {% endblock %}
 </head>
 
 {% block navbar %}
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-    <div class="container-fluid justify-content-center">
-        <a class="navbar-brand" href="{{ url_for('index') }}"><i class="fa fa-cutlery" aria-hidden="true"></i>Flask
-            Cookbook</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('index') }}">Home</a>
-                </li>
-                {% if current_user.is_anonymous %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('login') }}">Login</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('register') }}">Register</a>
-                </li>
-                {% else %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
-                </li>
-                {% endif %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('recipes_list') }}">Recipes</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('contact')  }}">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('recipes_stats')  }}">Stats</a>
-                </li>
-                <li class="nav-item btn-submit-recipe">
-                    <a class="nav-link" href="{{ url_for('add_recipe')  }}"><i class="fa fa-upload"
-                            aria-hidden="true"></i> Submit Recipe</a>
-                </li>
-            </ul>
-        </div>
+  <div class="container-fluid justify-content-center">
+    <a class="navbar-brand" href="{{ url_for('index') }}"><i class="fa fa-cutlery" aria-hidden="true"></i>Flask
+      Cookbook</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+        </li>
+        {% if current_user.is_anonymous %}
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('register') }}">Register</a>
+        </li>
+        {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+        </li>
+        {% endif %}
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('recipes_list') }}">Recipes</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('contact')  }}">Contact</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('recipes_stats')  }}">Stats</a>
+        </li>
+        <li class="nav-item btn-submit-recipe">
+          <a class="nav-link" href="{{ url_for('add_recipe')  }}"><i class="fa fa-upload" aria-hidden="true"></i> Submit
+            Recipe</a>
+        </li>
+      </ul>
     </div>
+  </div>
 </nav>
 {% endblock %}
 
 
 {% block content %}
 <div class="container">
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    {% for message in messages %}
-    <div class="alert alert-info" role="alert">{{ message }}</div>
-    {% endfor %}
-    {% endif %}
-    {% endwith %}
+  {% with messages = get_flashed_messages() %}
+  {% if messages %}
+  {% for message in messages %}
+  <div class="alert alert-info" role="alert">{{ message }}</div>
+  {% endfor %}
+  {% endif %}
+  {% endwith %}
 
-    {# application content needs to be provided in the app_content block #}
-    {% block app_content %}{% endblock %}
+  {# application content needs to be provided in the app_content block #}
+  {% block app_content %}{% endblock %}
 </div>
 {% endblock %}
 
 {% block footer %}
 <!-- Footer -->
 <footer>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6 col-sm-3">
-                <h5>About</h5>
-                <p>Website where you can add all you recipes and discover exciting new ones!</p>
-            </div>
-            <div class="col-lg-6 col-sm-3">
-                <h5>Recipes</h5>
-                <ul>
-                    <li><a href="{{ url_for('recipes_list')  }}">Browse Recipes</a></li>
-                    <li><a href="{{ url_for('add_recipe')  }}">Add Recipe</a></li>
-                </ul>
-            </div>
-        </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 col-sm-3">
+        <h5>About</h5>
+        <p>Website where you can add all you recipes and discover exciting new ones!</p>
+      </div>
+      <div class="col-lg-6 col-sm-3">
+        <h5>Recipes</h5>
+        <ul>
+          <li><a href="{{ url_for('recipes_list')  }}">Browse Recipes</a></li>
+          <li><a href="{{ url_for('add_recipe')  }}">Add Recipe</a></li>
+        </ul>
+      </div>
     </div>
+  </div>
 </footer>
 {% endblock %}
 
