--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,54 +4,54 @@
 
 <!-- Carousel -->
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img class="first-slide" src="static/img/slider1.jpg" alt="First slide">
-            <div class="container">
-                <div class="carousel-caption text-left">
-                    <h1><a href="recipe-detail.html">The Salmon Oatmeal Crackers</a></h1>
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida
-                        at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                    <p><a class="btn btn-lg btn-primary" href="{{ url_for('recipes_list') }}" role="button">Read more</a></p>
-                </div>
-            </div>
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="first-slide" src="static/img/slider1.jpg" alt="First slide">
+      <div class="container">
+        <div class="carousel-caption text-left">
+          <h1><a href="recipe-detail.html">The Salmon Oatmeal Crackers</a></h1>
+          <p>Great recipe check all of them!</p>
+          <p><a class="btn btn-lg btn-primary" href="{{ url_for('recipes_list') }}" role="button">Read
+              more</a></p>
         </div>
-        <div class="carousel-item">
-            <img class="second-slide" src="static/img/slider2.jpg" alt="Second slide">
-            <div class="container">
-                <div class="carousel-caption">
-                    <h1><a href="recipe-detail.html">Wide range of vegetarian recipes</a></h1>
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida
-                        at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                    <p><a class="btn btn-lg btn-primary" href="{{ url_for('recipes_list') }}" role="button">Read more</a></p>
-                </div>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <img class="third-slide" src="static/img/slider3.jpg" alt="Third slide">
-            <div class="container">
-                <div class="carousel-caption text-right">
-                    <h1><a href="recipe-detail.html">Homemade Bread</a></h1>
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida
-                        at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                    <p><a class="btn btn-lg btn-primary" href="{{ url_for('recipes_list') }}" role="button">Read more</a></p>
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
-    <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
+    <div class="carousel-item">
+      <img class="second-slide" src="static/img/slider2.jpg" alt="Second slide">
+      <div class="container">
+        <div class="carousel-caption">
+          <h1><a href="recipe-detail.html">Wide range of vegetarian recipes</a></h1>
+          <p>Check all of our recipes!</p>
+          <p><a class="btn btn-lg btn-primary" href="{{ url_for('recipes_list') }}" role="button">Read
+              more</a></p>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="third-slide" src="static/img/slider3.jpg" alt="Third slide">
+      <div class="container">
+        <div class="carousel-caption text-right">
+          <h1><a href="recipe-detail.html">Homemade Bread</a></h1>
+          <p>Click for more!</p>
+          <p><a class="btn btn-lg btn-primary" href="{{ url_for('recipes_list') }}" role="button">Read
+              more</a></p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
 
 <!-- List recipes -->
