--- a/app/templates/add_recipe.html
+++ b/app/templates/add_recipe.html
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group required">
               {{ form.short_description.label}}
-              {{ form.short_description(class_="form-control", rows="4") }}
+              {{ form.short_description(class_="form-control", rows="4", maxlength=64) }}
             </div>
             <div class="form-group required">
               {{ form.content.label}}
